// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots SectionBox Custom Title 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <h1>
      custom title
    </h1>
    <div
      class="MuiBox-root css-1txv3mw"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Header Props 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h1
            class="MuiTypography-root MuiTypography-h1 MuiTypography-noWrap css-yeaech-MuiTypography-root"
          >
            This is a section title with a main style
          </h1>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Titled 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
          >
            This is a section title default
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    />
  </div>
</div>
`;

exports[`Storyshots SectionBox Titled Children 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-1qm9nul-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-70qvj9"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 MuiTypography-noWrap css-m5vcfd-MuiTypography-root"
          >
            This is a section title
          </h2>
          <div
            class="MuiBox-root css-ldp2l3"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1txv3mw"
    >
      <p>
        A child paragraph.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots SectionBox With Children 1`] = `
<div>
  <div
    class="MuiBox-root css-j1fy4m"
  >
    <div
      class="MuiBox-root css-1txv3mw"
    >
      <p>
        A child paragraph.
      </p>
    </div>
  </div>
</div>
`;
